<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/nav_home"
            />
        <item
            android:id="@+id/disclaimer"
            android:title="@string/nav_disclaimer"
            />
        />
        <item
            android:id="@+id/generalinstruction"
            android:title="@string/nav_general_instruction"
            />
        <item
            android:id="@+id/about_us"
            android:title="@string/nav_about_us" />

        <item
            android:id="@+id/exit"
            android:title="@string/nav_exit" />
        <item
            android:id="@+id/version"
            android:title="@string/nav_version" />



    </group>
</menu>